:bug: height stretching error

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,8 @@ section p {
 }
 
 .etc-art-info > img {
+  height: 100%;
+  max-height: 483px;
   margin-bottom: 1rem;
 }
 
